welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:3: error: type mismatch;
 found   : Int(0)
 required: Boolean
	var c:Boolean = 0
                        ^SlugSnail:10: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    else if (isFacingTrail(c)){
                           ^SlugSnail:15: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
      if (!isFacingTrail(c)){
                         ^