welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
	var c:Boolean = 0
  while (c){
    if(estSurBiscuit()){
      prendBiscuit()
      baisseBrosse()
      leveBrosse()
    }
    else if (isFacingTrail(c)){
      avance()
    }
    else{
      gauche()
      if (!isFacingTrail(c)){
        gauche();gauche()
      }
    }
  }
 }

def isFacingTrail(c:Color):Boolean = {
  var bo:Boolean = !estFaceMur()
  if (bo){
  	avance()
  	bo = (getCouleurSol()==c)
  	recule()
  }
  return bo
  
}